# jackson-stree-problems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  codeforce-279-b.cc  practice_1.json
codeforce/: CMakeLists.txt
codejam/: CMakeLists.txt  round-b-1-final.cc  round-b-1-prompt.txt  round-b-1.cc
dear-imgui/: CMakeLists.txt  dear_imgui_0.cc  dear_imgui_1.cc
effective-modern-cpp/: CMakeLists.txt  emc-item-23.cc
ext/: CMakeLists.txt
interview-questions/: ACR_0.cc  CMakeLists.txt
json/: CMakeLists.txt  json_0.cc  json_1.cc  json_2.cc  json_3.cc  json_4.cc  json_5.cc  json_6.cc  json_from_str_0.cc
pistache/: CMakeLists.txt  testapp_0.cc  testapp_1.cc
prac-arduino/: accel_multi_stepper_0.ino  sheeter_0.c
prac-arduino/sheeter_0/: sheeter_0.ino
prac-c/: prac-gettimeofday.c
prac-cmake/: CMakeLists.txt
prac-cmake/test1/: CMakeLists.txt  do_test_driver.cc  test1.cc  test2.cc
prac-cmake/test2/: test1.h  test2.h
prac-cmake/test3/: CMakeLists.txt
prac-cmake/test3/test4/: test4.cc  test4.h
prac-cpp/: CMakeLists.txt  bool_print_0.cc  builder_ex_0.cc  char_print_0.cc  char_print_1.cc  chrono_0.cc  enum_class_0.cc  for_loop_0.cc  function_order_0.cc  hash_gen_0.cc  hash_gen_1.cc  hash_gen_2.cc  lambda_0.cc  lambda_1.cc  map_address_0.cc  memcpy_0.cc  move_0.cc  move_1.cc  move_2.cc  move_3.cc  pair_hash_0.cc  pointer_0.cc  pointer_1.cc  pragma_push_pop_0.cc  printable_0.cc  shared_pointer_0.cc  state_machine_0.cc  strategy_0.cc  strings_0.cc  strings_1.cc  stringstream_0.cc  struct_overload_0.cc  struct_overload_1.cc  struct_overload_2.cc  struct_overload_3.cc  templates_3.cc  templates_4.cc  time_0.cc  unicode_0.cc
prac-python/: bool_0.py  conditional_0.py  copy_0.py  csv_0.py  datetime_0.py  decorator_0.py  decorator_1.py  dict_2.py  dict_3.py  dict_sort_0.py  elif_0.py  empty_dict_0.py  enum_tuple_0.py  for_break_0.py  for_continue_0.py  for_range_0.py  generators_0.py  graphs_0.py  import_0.py  json_0.py  json_1.py  list_0.py  list_comprehension_0.py  list_comprehension_1.py  list_comprehension_2.py  list_slice_0.py  list_sort_0.py  local_0.py  loop_0.py  modulo_0.py  modulo_1.py  none_0.py  not_0.py  numbers_0.py  path_extract_0.py  pytz_0.py  raise_exception_0.py  regex_0.py  regex_4.py  regex_5.py  (+13 more)
prac-python/asyncio-coroutines/: coroutine-prac-0.py  coroutine-prac-1.py  coroutine-prac-2.py  coroutine-prac-4.py  coroutine-prac-5.py
prac-python/dict/: dict_0.py  dict_1.py  dict_2.py  dict_3.py  dict_get_0.py  dict_items_0.py  dict_list_compare_0.py  dict_pop_0.py  empty_dict_0.py
prac-python/path-matching/: path_match_0.py  path_match_2.py
prac-python/practice-python-org/: 01-character-input.py  02-odd-or-even.py  03-list-less-than-ten.py  04-divisors.py  05-list-overlap.py  06-string-lists.py  07-list-comprehensions.py  08-rock-paper-scissors.py  09-guessing-game-one.py  10-list-overlap-comprehensions.py  11-check-primality-functions.py  12-list-ends.py  13-fibonacci.py  14-list-remove-duplicates.py  15-reverse-word-order.py  16-password-generator.py  18-cows-and-bulls.py  20-element-search.py
prac-python/python-math/: quaternion_0.py  quaternion_1.py  quaternion_2.py  quaternion_3.py  quaternion_4.py  quaternion_5.py
prac-python/regex/: regex_1.py  regex_2.py  regex_3.py  regex_5.py  regex_6.py  regex_7.py  regex_9.py
prac-python/string/: clean_json_0.py  json_dumps_0.py  str_0.py  str_similarity_0.py  str_split_0.py  string_match_0.py  substring_0.py  substring_search_0.py  unicode_0.py  url_encode_0.py
prac-python/try-exception-error-raise/: exception_0.py  exception_1.py  raise_exception_0.py
python/: dict_0.py  extract_task_id.py  for_range_0.py  list_key_loop_0.py  list_of_list.py  lists_and_tuples.py  path_match_1.py  path_match_3.py  pcd_to_dict_0.py  return_set_as_list.py  sets_and_lists.py
scrap-cpp/: CAT_0.cc  CMakeLists.txt  copy_ctor_1.cc  move_1.cc  move_2.cc  move_4.cc  templates_0.cc  templates_1.cc  templates_2.cc  templates_3.cc
spdlog/: CMakeLists.txt  spdlog_0.cc  spdlog_1.cc  spdlog_2.cc  spdlog_3.cc  spdlog_4.cc  spdlog_5.cc
